--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ body {
     color: #fff;
     min-height: 300px;
     text-align: center;
-    background: url('https://unsplash.it/800/400/') no-repeat center center;
+    background: url('https://unsplash.it/800/800?image=957') no-repeat center center;
     background-size: cover;
     position: relative;
 }
@@ -223,7 +223,7 @@ body {
 /*--SUBSCRIBE--*/
 
 .subscribe {
-    background: url('https://unsplash.it/753/345/') no-repeat center center;
+    background: url('https://unsplash.it/800/800?image=962') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
     padding: 50px;
