--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body {
     min-height: 100%;
     background-size: cover;
     background-color: #000;
-    background-image: url('https://unsplash.it/760?image=1067');
+    background-image: url('sunrise.jpg');
 }
 
 .hero-content {
